<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_man"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginLeft="@dimen/base_margin"
                android:textSize="24sp"
                android:textColor="@color/black_87"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/man" />

            <TextView
                android:id="@+id/birth_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:textSize="12sp"
                android:textColor="@color/black_38"
                android:text= "@string/birth_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:textSize="16sp"
                android:text= "@string/birth_date"
                android:textColor="@color/black_87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birth_date_label" />

            <TextView
                android:id="@+id/field_of_activity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:textSize="12sp"
                android:textColor="@color/black_38"
                android:text= "@string/field_of_activity_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birth_date" />

            <TextView
                android:id="@+id/field_of_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:textSize="16sp"
                android:text= "@string/field_of_activity"
                android:textColor="@color/black_87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_of_activity_label"
                android:layout_marginStart="@dimen/base_margin" />

            <TextView
                android:id="@+id/get_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text= "@string/get_push"
                android:textColor="@color/black_87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_of_activity" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/get_push"
                app:layout_constraintTop_toBottomOf="@id/field_of_activity"
                android:layout_marginRight="@dimen/base_margin"
                android:layout_marginLeft="50dp"
                android:checked="true"
                android:layout_marginEnd="@dimen/base_margin"
                android:layout_marginStart="50dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>